--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-media-server",
-  "version": "2.3.8",
+  "name": "@linkplicity/node-media-server",
+  "version": "1.0.0",
   "description": "A Node.js implementation of RTMP Server",
   "bin": "bin/app.js",
   "main": "src/node_media_server.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/illuspas/Node-Media-Server.git"
+    "url": "git+https://github.com/linkplicity/Node-Media-Server"
   },
   "keywords": [
     "rtmp",
@@ -17,11 +17,17 @@
     "server"
   ],
   "author": "Chen Mingliang",
+  "contributors": [
+    {
+      "name": "Patrick Taudes",
+      "email": "patrick.taudes@linkplicity.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/illuspas/Node-Media-Server/issues"
+    "url": "https://github.com/linkplicity/Node-Media-Server/issues"
   },
-  "homepage": "https://github.com/illuspas/Node-Media-Server#readme",
+  "homepage": "https://github.com/linkplicity/Node-Media-Server#readme",
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
     "chalk": "^2.4.2",
